tests/baselines/reference/parserClassDeclaration1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration1.ts (4 errors) ====
    class C extends A extends B {
                      ~~~~~~~
!!! error TS1005: '{' expected.
                                ~
!!! error TS1005: ';' expected.
                    ~
!!! error TS2304: Cannot find name 'A'.
                              ~
!!! error TS2304: Cannot find name 'B'.
    }